--- a/web/contactUs.xhtml
+++ b/web/contactUs.xhtml
@@ -83,7 +83,7 @@
             <b:container>
                 <b:row>
                     <b:column span="12">
-                        <p>Lima, Perú Lun - Vie 9:30 a 18:00hrs</p>
+                        <p>Lima, Perú Mon - Fri 9:30 a 18:00hrs</p>
                     </b:column>
                 </b:row>
             </b:container>
@@ -108,7 +108,7 @@
         <div id="footer_3">
             <b:container>
                 <b:row>
-                    <p>© Copyright 2016 TouristTravel Todos los derechos reservados.</p>
+                    <p>© Copyright 2016 TouristTravel All rights reserved.</p>
                 </b:row>
             </b:container>
         </div>
