--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -78,14 +78,11 @@
                      </f:facet>
                   </b:modal>
                   <!--Modals Items-->
-                  <b:row>
-                     <b:column span="3">
+
                         <a id="atrigger" href="#amodal" data-toggle="modal">
-                           <h:graphicImage url="http://www.charmcitycountdown.com/images/Buy-Tickets-Now.png"
-                                           style="width: 255px;margin-left: 100%;margin-top: 35%;"/>
+                           <h:graphicImage url="http://www.charmcitycountdown.com/images/Buy-Tickets-Now.png"/>
                         </a>
-                     </b:column>
-                  </b:row>
+
                   <!--FIN MODAL-->
                </div>
             </section>
@@ -97,7 +94,7 @@
          <b:container>
             <b:row>
                <b:column span="12">
-                  <p>Lima, Perú Lun - Vie 9:30 a 18:00hrs</p>
+                  <p>Lima, Perú Mon - Fri 9:30 a 18:00hrs</p>
                </b:column>
             </b:row>
          </b:container>
@@ -122,7 +119,7 @@
       <div id="footer_3">
          <b:container>
             <b:row>
-               <p>© Copyright 2016 TouristTravel Todos los derechos reservados.</p>
+               <p>© Copyright 2016 TouristTravel All rights reserved.</p>
             </b:row>
          </b:container>
       </div>
