--- a/web/traveldetails.xhtml
+++ b/web/traveldetails.xhtml
@@ -20,6 +20,7 @@
     </header>
     <main>
         <b:container>
+            <h:dataTable value="#{hrservicefacade}"/>
             <f:metadata>
                     <f:viewParam name="id" value="#{country.countryid}"/>
                 <f:viewParam name="name" value="#{country.countryname}"/>
