--- a/web/searchcountry.xhtml
+++ b/web/searchcountry.xhtml
@@ -19,9 +19,10 @@
     </header>
     <main>
         <b:container>
-            <h:dataTable value="#{hrservicefacade.getCountriesDetails(country.countryname)}"/>
+            <h:dataTable value="#{hrservicefacade.getCountriesDetails(countryname)"/>
             <f:metadata>
                 <f:viewParam name="id" value="#{country.countryid}"/>
+                <f:viewParam name="name" value="#{country.countryname}"/>
                 <f:viewParam name="desc" value="#{country.description}"/>
             </f:metadata>
             <b:row>
